--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "marked_entities",
+  "author": "Maria Nag <manyaknag@gmail.com>",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -20,7 +21,7 @@
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.5.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.5.21"
