--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,8 @@
   "useTabs": false,
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "none",
+  "trailingComma": "es5",
   "bracketSpacing": true,
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "jsxBracketSameLine": true
 }
