--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "marked_entities",
-  "author": "Maria Nag <manyaknag@gmail.com>",
-  "version": "0.1.0",
   "private": true,
+  "author": "Maria Nag <manyaknag@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Manyaka/marked_entities.git"
+  },
   "scripts": {
     "server": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -14,17 +17,17 @@
     "vue": "^2.6.6"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.5.5",
-    "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-plugin-unit-jest": "^3.5.3",
-    "@vue/cli-service": "^3.5.3",
+    "@vue/cli-plugin-babel": "^3.9.2",
+    "@vue/cli-plugin-eslint": "^3.9.2",
+    "@vue/cli-plugin-unit-jest": "^3.9.0",
+    "@vue/cli-service": "^3.9.2",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.7.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "babel-eslint": "^10.0.2",
+    "babel-jest": "^24.8.0",
+    "eslint": "^6.0.1",
+    "eslint-plugin-vue": "^5.2.3",
     "vue-template-compiler": "^2.5.21"
   }
 }
