--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "marked_entities",
-  "private": true,
   "author": "Maria Nag <manyaknag@gmail.com>",
   "repository": {
     "type": "git",
@@ -13,21 +12,26 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "core-js": "3.6.2",
     "normalize.css": "8.0.1",
-    "vue": "2.6.10"
+    "vue": "2.6.11"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-plugin-unit-jest": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
-    "@vue/eslint-config-standard": "4.0.0",
-    "@vue/test-utils": "1.0.0-beta.29",
+    "@vue/cli-plugin-babel": "4.1.2",
+    "@vue/cli-plugin-eslint": "4.1.2",
+    "@vue/cli-plugin-unit-jest": "4.1.2",
+    "@vue/cli-service": "4.1.2",
+    "@vue/eslint-config-standard": "5.0.1",
+    "@vue/test-utils": "1.0.0-beta.30",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.2.2",
-    "eslint-plugin-vue": "5.2.3",
-    "vue-template-compiler": "2.6.10"
+    "babel-eslint": "10.0.3",
+    "babel-jest": "24.9.0",
+    "eslint": "6.8.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "6.1.2",
+    "vue-template-compiler": "2.6.11"
   }
 }
